--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     "autoload-dev": {
         "classmap": [
             "tests/TestCase.php",
+            "tests/HasTagsTraitsTests.php",
             "tests/stubs/Activity.php"
         ]
     }
